--- a/docs/examples/intro.ipynb
+++ b/docs/examples/intro.ipynb
@@ -2,33 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR:root:The parameter <ansatzs> should be a list of strings type.\n"
+      "WARNING:jax._src.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR:root:The parameter <features> should be a list of floats type.\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'exit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 10\u001b[0m\n\u001b[1;32m      6\u001b[0m y \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mtarget\n\u001b[1;32m      8\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(X, y,test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m.3\u001b[39m,random_state \u001b[38;5;241m=\u001b[39m\u001b[38;5;241m123\u001b[39m)  \n\u001b[0;32m---> 10\u001b[0m q \u001b[38;5;241m=\u001b[39m \u001b[43mQuantumClassifier\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnqubits\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mclassifiers\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mqnn_bag\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m scores, predicitons \u001b[38;5;241m=\u001b[39m q\u001b[38;5;241m.\u001b[39mfit(X_train, X_test, y_train, y_test)\n",
-      "File \u001b[0;32m~/anaconda3/envs/test/lib/python3.9/site-packages/lazyqml/supervised.py:378\u001b[0m, in \u001b[0;36mQuantumClassifier.__init__\u001b[0;34m(self, nqubits, randomstate, predictions, ignoreWarnings, numPredictors, numLayers, customMetric, customImputerNum, customImputerCat, classifiers, ansatzs, embeddings, features, verbose, optimizer, learningRate, epochs, runs, maxSamples)\u001b[0m\n\u001b[1;32m    376\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m errormsg:\n\u001b[1;32m    377\u001b[0m         logging\u001b[38;5;241m.\u001b[39merror(i,exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m--> 378\u001b[0m     \u001b[43mexit\u001b[49m()\n\u001b[1;32m    379\u001b[0m \u001b[38;5;28mprint\u001b[39m(tabulate([[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlearningRate,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mepochs,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mruns,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclassifiers,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39membeddings,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mansatzs,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfeatures,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnqubits,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumLayers,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumPredictors]], headers\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLearning Rate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEpochs\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m# Runs\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClassifiers\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEmbeddings\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAnsatzs\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFeatures\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQubits\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLayers\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPredictors\u001b[39m\u001b[38;5;124m\"\u001b[39m], tablefmt\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124morgtbl\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'exit' is not defined"
+      "|   Learning Rate |   Epochs |   # Runs | Classifiers   | Embeddings   | Ansatzs   | Features        |   Qubits |   Layers |   Predictors |\n",
+      "|-----------------+----------+----------+---------------+--------------+-----------+-----------------+----------+----------+--------------|\n",
+      "|            0.01 |      100 |        1 | ['qnn_bag']   | ['all']      | ['all']   | [0.3, 0.5, 0.8] |        2 |        5 |           10 |\n",
+      "| Model       | Embedding           | Ansatz             |   Accuracy |   Balanced Accuracy |   ROC AUC |   F1 Score |   Time taken |\n",
+      "|:------------|:--------------------|:-------------------|-----------:|--------------------:|----------:|-----------:|-------------:|\n",
+      "| qnn_bag_0.8 | amplitude_embedding | tree_tensor        |   0.602339 |            0.55247  |  0.55247  |   0.577626 |      2.24495 |\n",
+      "| qnn_bag_0.8 | ry_embedding        | HPzRx              |   0.573099 |            0.545688 |  0.545688 |   0.568532 |      2.0294  |\n",
+      "| qnn_bag_0.3 | ry_embedding        | HPzRx              |   0.573099 |            0.545688 |  0.545688 |   0.568532 |      1.82091 |\n",
+      "| qnn_bag_0.5 | ry_embedding        | HPzRx              |   0.573099 |            0.545688 |  0.545688 |   0.568532 |      1.80947 |\n",
+      "| qnn_bag_0.3 | rx_embedding        | HPzRx              |   0.567251 |            0.540834 |  0.540834 |   0.563389 |      2.04469 |\n",
+      "| qnn_bag_0.8 | rz_embedding        | HPzRx              |   0.567251 |            0.540834 |  0.540834 |   0.563389 |      1.81121 |\n",
+      "| qnn_bag_0.8 | rx_embedding        | HPzRx              |   0.567251 |            0.540834 |  0.540834 |   0.563389 |      1.87448 |\n",
+      "| qnn_bag_0.5 | rx_embedding        | HPzRx              |   0.567251 |            0.540834 |  0.540834 |   0.563389 |      2.34154 |\n",
+      "| qnn_bag_0.3 | rz_embedding        | HPzRx              |   0.567251 |            0.540834 |  0.540834 |   0.563389 |      1.81423 |\n",
+      "| qnn_bag_0.5 | rz_embedding        | HPzRx              |   0.567251 |            0.540834 |  0.540834 |   0.563389 |      1.98473 |\n",
+      "| qnn_bag_0.5 | ry_embedding        | tree_tensor        |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      2.30393 |\n",
+      "| qnn_bag_0.3 | ry_embedding        | tree_tensor        |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      2.04773 |\n",
+      "| qnn_bag_0.8 | rx_embedding        | hardware_efficient |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      5.24636 |\n",
+      "| qnn_bag_0.8 | ry_embedding        | tree_tensor        |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      2.04369 |\n",
+      "| qnn_bag_0.3 | ry_embedding        | two_local          |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      1.72669 |\n",
+      "| qnn_bag_0.5 | ry_embedding        | two_local          |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      1.97033 |\n",
+      "| qnn_bag_0.8 | ry_embedding        | two_local          |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      1.72756 |\n",
+      "| qnn_bag_0.3 | ry_embedding        | hardware_efficient |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      5.26276 |\n",
+      "| qnn_bag_0.8 | rz_embedding        | hardware_efficient |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      5.29466 |\n",
+      "| qnn_bag_0.5 | rz_embedding        | hardware_efficient |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      5.24149 |\n",
+      "| qnn_bag_0.3 | rz_embedding        | hardware_efficient |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      5.25633 |\n",
+      "| qnn_bag_0.5 | ry_embedding        | hardware_efficient |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      5.39174 |\n",
+      "| qnn_bag_0.8 | ry_embedding        | hardware_efficient |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      5.34611 |\n",
+      "| qnn_bag_0.5 | rx_embedding        | hardware_efficient |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      5.21169 |\n",
+      "| qnn_bag_0.3 | rx_embedding        | hardware_efficient |   0.602339 |            0.539977 |  0.539977 |   0.560338 |      5.43763 |\n",
+      "| qnn_bag_0.8 | amplitude_embedding | two_local          |   0.590643 |            0.537764 |  0.537764 |   0.56207  |      1.87894 |\n",
+      "| qnn_bag_0.8 | amplitude_embedding | HPzRx              |   0.619883 |            0.53705  |  0.53705  |   0.537413 |      1.84112 |\n",
+      "| qnn_bag_0.8 | amplitude_embedding | hardware_efficient |   0.578947 |            0.518061 |  0.518061 |   0.538596 |      5.99879 |\n",
+      "| qnn_bag_0.5 | rx_embedding        | two_local          |   0.573099 |            0.513207 |  0.513207 |   0.534185 |      1.90031 |\n",
+      "| qnn_bag_0.3 | rx_embedding        | tree_tensor        |   0.573099 |            0.513207 |  0.513207 |   0.534185 |      2.29299 |\n",
+      "| qnn_bag_0.5 | rx_embedding        | tree_tensor        |   0.573099 |            0.513207 |  0.513207 |   0.534185 |      2.13899 |\n",
+      "| qnn_bag_0.3 | rx_embedding        | two_local          |   0.573099 |            0.513207 |  0.513207 |   0.534185 |      1.73466 |\n",
+      "| qnn_bag_0.8 | rx_embedding        | tree_tensor        |   0.573099 |            0.513207 |  0.513207 |   0.534185 |      2.23538 |\n",
+      "| qnn_bag_0.8 | rz_embedding        | tree_tensor        |   0.573099 |            0.513207 |  0.513207 |   0.534185 |      2.26354 |\n",
+      "| qnn_bag_0.5 | rz_embedding        | tree_tensor        |   0.573099 |            0.513207 |  0.513207 |   0.534185 |      2.06802 |\n",
+      "| qnn_bag_0.3 | rz_embedding        | tree_tensor        |   0.573099 |            0.513207 |  0.513207 |   0.534185 |      2.25877 |\n",
+      "| qnn_bag_0.8 | rx_embedding        | two_local          |   0.573099 |            0.513207 |  0.513207 |   0.534185 |      1.75039 |\n",
+      "| qnn_bag_0.8 | rz_embedding        | two_local          |   0.573099 |            0.510708 |  0.510708 |   0.53013  |      1.93761 |\n",
+      "| qnn_bag_0.5 | rz_embedding        | two_local          |   0.573099 |            0.510708 |  0.510708 |   0.53013  |      1.73715 |\n",
+      "| qnn_bag_0.3 | rz_embedding        | two_local          |   0.573099 |            0.510708 |  0.510708 |   0.53013  |      1.71601 |\n",
+      "| qnn_bag_0.3 | ZZ_embedding        | tree_tensor        |   0.602339 |            0.5      |  0.5      |   0.452854 |      2.33993 |\n",
+      "| qnn_bag_0.5 | ZZ_embedding        | tree_tensor        |   0.602339 |            0.5      |  0.5      |   0.452854 |      2.08609 |\n",
+      "| qnn_bag_0.8 | ZZ_embedding        | tree_tensor        |   0.602339 |            0.5      |  0.5      |   0.452854 |      2.05578 |\n",
+      "| qnn_bag_0.3 | ZZ_embedding        | two_local          |   0.602339 |            0.5      |  0.5      |   0.452854 |      1.99303 |\n",
+      "| qnn_bag_0.5 | ZZ_embedding        | two_local          |   0.602339 |            0.5      |  0.5      |   0.452854 |      1.71724 |\n",
+      "| qnn_bag_0.8 | ZZ_embedding        | two_local          |   0.602339 |            0.5      |  0.5      |   0.452854 |      1.8084  |\n",
+      "| qnn_bag_0.3 | ZZ_embedding        | hardware_efficient |   0.602339 |            0.5      |  0.5      |   0.452854 |      5.68319 |\n",
+      "| qnn_bag_0.5 | ZZ_embedding        | hardware_efficient |   0.602339 |            0.5      |  0.5      |   0.452854 |      5.3838  |\n",
+      "| qnn_bag_0.3 | amplitude_embedding | HPzRx              |   0.602339 |            0.5      |  0.5      |   0.452854 |      2.86749 |\n",
+      "| qnn_bag_0.5 | amplitude_embedding | HPzRx              |   0.602339 |            0.5      |  0.5      |   0.452854 |      1.99632 |\n",
+      "| qnn_bag_0.5 | amplitude_embedding | hardware_efficient |   0.602339 |            0.5      |  0.5      |   0.452854 |      5.53895 |\n",
+      "| qnn_bag_0.3 | amplitude_embedding | hardware_efficient |   0.602339 |            0.5      |  0.5      |   0.452854 |      5.84892 |\n",
+      "| qnn_bag_0.5 | amplitude_embedding | two_local          |   0.602339 |            0.5      |  0.5      |   0.452854 |      1.76487 |\n",
+      "| qnn_bag_0.3 | amplitude_embedding | two_local          |   0.602339 |            0.5      |  0.5      |   0.452854 |      1.90227 |\n",
+      "| qnn_bag_0.5 | amplitude_embedding | tree_tensor        |   0.602339 |            0.5      |  0.5      |   0.452854 |      2.24216 |\n",
+      "| qnn_bag_0.3 | amplitude_embedding | tree_tensor        |   0.602339 |            0.5      |  0.5      |   0.452854 |      2.3621  |\n",
+      "| qnn_bag_0.8 | ZZ_embedding        | hardware_efficient |   0.602339 |            0.5      |  0.5      |   0.452854 |      5.59989 |\n",
+      "| qnn_bag_0.5 | ZZ_embedding        | HPzRx              |   0.467836 |            0.478298 |  0.478298 |   0.471776 |      1.80632 |\n",
+      "| qnn_bag_0.8 | ZZ_embedding        | HPzRx              |   0.467836 |            0.478298 |  0.478298 |   0.471776 |      1.79939 |\n",
+      "| qnn_bag_0.3 | ZZ_embedding        | HPzRx              |   0.467836 |            0.478298 |  0.478298 |   0.471776 |      1.79017 |\n"
      ]
     }
    ],
