FIX: bug in predictions output

--- a/docs/examples/intro.ipynb
+++ b/docs/examples/intro.ipynb
@@ -44,6 +44,54 @@
     "\n",
     "#print(predicitons)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:jax._src.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qsvm rx_embedding None\n",
+      "{'Model': 'qsvm', 'Embedding': 'rx_embedding', 'Accuracy': 0.6257309941520468, 'Balanced Accuracy': 0.5643917761279269, 'ROC AUC': 0.5643917761279269, 'F1 Score': 0.5862007636170316, 'Time taken': 46.68546223640442}\n",
+      "qsvm ry_embedding None\n",
+      "{'Model': 'qsvm', 'Embedding': 'ry_embedding', 'Accuracy': 0.6257309941520468, 'Balanced Accuracy': 0.5643917761279269, 'ROC AUC': 0.5643917761279269, 'F1 Score': 0.5862007636170316, 'Time taken': 46.604660987854004}\n",
+      "qsvm rz_embedding None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from lazyqml.supervised import QuantumClassifier\n",
+    "from sklearn.datasets import load_breast_cancer, load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "data = load_breast_cancer()\n",
+    "X = data.data\n",
+    "y = data.target\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,test_size=.3,random_state =123)  \n",
+    "\n",
+    "q = QuantumClassifier(nqubits=2,classifiers=\"qnn\")\n",
+    "\n",
+    "scores = q.fit(X_train, X_test, y_train, y_test)\n",
+    "\n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
